# cpp-practice-2026

./: .gitignore  README.md
CH4/: LAB_4.1.cpp  LAB_4.2.cpp  LAB_4.6.cpp  LAB_4.8.cpp
CH5/: LAB_5.1.cpp  LAB_star.cpp
CH6/: LAB_6.2.cpp  LAB_6.3.cpp  LAB_6.4.cpp
practice/: .gitattributes  CMakeLists.txt
practice/CH04/: LAB_4.3.cpp
practice/CH05/: LAB_5.2.cpp  LAB_5.3.cpp
practice/CH07/: LAB_7.1.cpp  LAB_7.2.cpp  LAB_7.4.cpp  LAB_7.6.cpp
practice/CH08/: LAB_8.1.cpp  LAB_8.3.cpp  LAB_8.6.cpp
practice/CH09/: CMakeLists.txt
practice/CH09/LAB_9.1/: CMakeLists.txt  coordin.h
practice/CH09/LAB_9.2/: CMakeLists.txt
practice/CH09/LAB_9.5/: CMakeLists.txt  namesp.cpp  namesp.h  usenmsp.cpp
practice/CH10/: CMakeLists.txt  student.cpp  student.h  student_test.cpp
practice/CH11/: CMakeLists.txt  Complex.cpp  mycomplex.cpp  mycomplex.h  mycomplex_test.cpp
practice/CH12/: CMakeLists.txt
practice/CH12/LAB_12.1/: CMakeLists.txt  cow.cpp  cow.h  cow_test.cpp
practice/CH12/LAB_12.1_refactor/: CMakeLists.txt  cow.cpp  cow.h  test_cow.cpp
practice/CH12/LAB_12.2/: CMakeLists.txt  string2.cpp  string2.h  string_test.cpp
practice/CH13/: CMakeLists.txt  farm.h  test_farm.cpp
practice/CH4/: LAB_4.2.cpp  LAB_4.4.cpp  LAB_4.5.cpp  LAB_4.7.cpp
practice/CH5/: LAB_5.5.cpp
practice/CH6/: LAB_6.1.cpp
practice/CH7/: LAB_7.1.cpp  LAB_7.3.cpp  LAB_7.5.cpp
practice/CH8/: LAB_8.4.cpp  LAB_8.5.cpp
practice/CH9/: CMakeLists.txt  LAB_9.1.cpp  LAB_9.4.cpp
practice/CH9/LAB_9.1/: file1.cpp  file2.cpp
practice/CH9/LAB_9.2/: twofile1.cpp  twofile2.cpp
